Mon Jun 19 16:16:00 BST 2000 Olly Betts

	* Started ChangeLog

	* Updated README to reflect ferretfx now building again

	* Updated licence on all files

	* Added AUTHORS and NEWS files