@@ -1,7 +1,5 @@
 ### Process this file with automake to produce Makefile.in
 
-AUTOMAKE_OPTIONS = foreign # don't fuss about GNU required files
-
 SUBDIRS = gui msearch ferretfx
 
 EXTRA_DIST = COPYING buildall README \
