@@ -1,7 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-AUTOMAKE_OPTIONS = foreign # don't fuss about GNU required files
-
 noinst_HEADERS = main.h query.h cgiparam.h symboltab.h
 
 # include lex/flex generated C++ source
