@@ -1,3 +1,7 @@
+Mon Jun 19 16:55:00 BST 2000 Olly Betts
+
+	* Removed `foreign' option from all Makefile.am-s
+
 Mon Jun 19 16:16:00 BST 2000 Olly Betts
 
 	* Started ChangeLog
